crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@parallel_empty.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/parallel_empty.json
---
Engine {
    flat_config: FlatConfig {
        entries: [
            Action(
                Parallel {
                    count: Count(
                        0,
                    ),
                },
            ),
        ],
        handlers: [],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {},
    task_to_parent: {},
    pending_dispatches: [],
    next_task_id: 0,
}
