crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@parallel_three.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 33
expression: engine
input_file: crates/barnum_engine/tests/advance/parallel_three.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                All {
                    count: Count(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: All {
                            results: [
                                None,
                                None,
                                None,
                            ],
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            All {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 0,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            All {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 1,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                1,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            All {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 2,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                2,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 4,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 1,
            generation: Generation(1),
        },
        TaskId(
            1,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
        TaskId(
            2,
        ): Index {
            slot: 3,
            generation: Generation(1),
        },
    },
    pending_dispatches: [
        DispatchEvent {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Object {
                "shared": Bool(true),
            },
        },
        DispatchEvent {
            task_id: TaskId(
                1,
            ),
            handler_id: HandlerId(
                1,
            ),
            value: Object {
                "shared": Bool(true),
            },
        },
        DispatchEvent {
            task_id: TaskId(
                2,
            ),
            handler_id: HandlerId(
                2,
            ),
            value: Object {
                "shared": Bool(true),
            },
        },
    ],
    next_task_id: 3,
}
