crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@single_invoke.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 33
expression: engine
input_file: crates/barnum_engine/tests/advance/single_invoke.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 0,
            generation: Generation(1),
        },
    },
    pending_dispatches: [
        DispatchEvent {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Object {
                "x": Number(1),
            },
        },
    ],
    next_task_id: 1,
}
