crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@step_root_recursive.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 32
expression: engine
input_file: crates/barnum_engine/tests/advance/step_root_recursive.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Loop {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./decide.ts",
                    ),
                    func: FuncName(
                        "decide",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./process.ts",
                    ),
                    func: FuncName(
                        "process",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {
        0: Frame {
            parent: None,
            kind: Loop {
                body: ActionId(
                    1,
                ),
            },
        },
        1: Frame {
            parent: Some(
                SingleChild {
                    frame_id: FrameId(
                        0,
                    ),
                },
            ),
            kind: Chain {
                rest: ActionId(
                    3,
                ),
            },
        },
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            SingleChild {
                frame_id: FrameId(
                    1,
                ),
            },
        ),
    },
    pending_dispatches: [
        Dispatch {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                1,
            ),
            value: Object {
                "iteration": Number(0),
            },
        },
    ],
    next_task_id: 1,
}
