crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@attempt_wrapping_parallel.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 41
expression: flat_config
input_file: crates/barnum_engine/tests/advance/attempt_wrapping_parallel.json
---
FlatConfig {
    entries: [
        Action(
            Attempt {
                child: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Parallel {
                count: Count(
                    2,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./a.ts",
                ),
                func: FuncName(
                    "a",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./b.ts",
                ),
                func: FuncName(
                    "b",
                ),
                step_config_schema: None,
                value_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
