crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@branch_matching.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: flat_config
input_file: crates/barnum_engine/tests/advance/branch_matching.json
---
FlatConfig {
    entries: [
        Action(
            Branch {
                count: Count(
                    2,
                ),
            },
        ),
        BranchKey {
            key: KindDiscriminator(
                "Err",
            ),
        },
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
        BranchKey {
            key: KindDiscriminator(
                "Ok",
            ),
        },
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./err.ts",
                ),
                func: FuncName(
                    "handle",
                ),
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./ok.ts",
                ),
                func: FuncName(
                    "handle",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
