crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@chain_then_branch.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 43
expression: flat_config
input_file: crates/barnum_engine/tests/advance/chain_then_branch.json
---
FlatConfig {
    entries: [
        Action(
            Chain {
                rest: ActionId(
                    2,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
        Action(
            Branch {
                count: Count(
                    2,
                ),
            },
        ),
        BranchKey {
            key: KindDiscriminator(
                "A",
            ),
        },
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        BranchKey {
            key: KindDiscriminator(
                "B",
            ),
        },
        Action(
            Invoke {
                handler: HandlerId(
                    2,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./classify.ts",
                ),
                func: FuncName(
                    "classify",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./handle_a.ts",
                ),
                func: FuncName(
                    "handle",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./handle_b.ts",
                ),
                func: FuncName(
                    "handle",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
