crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@chain_two_steps.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: flat_config
input_file: crates/barnum_engine/tests/advance/chain_two_steps.json
---
FlatConfig {
    entries: [
        Action(
            Chain {
                rest: ActionId(
                    2,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./b.ts",
                ),
                func: FuncName(
                    "b",
                ),
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./a.ts",
                ),
                func: FuncName(
                    "a",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
