crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@deep_chain.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 43
expression: flat_config
input_file: crates/barnum_engine/tests/advance/deep_chain.json
---
FlatConfig {
    entries: [
        Action(
            Chain {
                rest: ActionId(
                    2,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
        Action(
            Chain {
                rest: ActionId(
                    4,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    2,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./a.ts",
                ),
                func: FuncName(
                    "a",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./b.ts",
                ),
                func: FuncName(
                    "b",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./c.ts",
                ),
                func: FuncName(
                    "c",
                ),
                input_schema: None,
                output_schema: None,
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
