crates/barnum_engine/tests/snapshots/engine_snapshot_tests__flatten_snapshots@foreach_array.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 42
expression: flat_config
input_file: crates/barnum_engine/tests/advance/foreach_array.json
---
FlatConfig {
    entries: [
        Action(
            ForEach {
                body: ActionId(
                    1,
                ),
            },
        ),
        Action(
            Invoke {
                handler: HandlerId(
                    0,
                ),
            },
        ),
    ],
    handlers: [
        TypeScript(
            TypeScriptHandler {
                module: ModulePath(
                    "./handler.ts",
                ),
                func: FuncName(
                    "run",
                ),
            },
        ),
    ],
    workflow_root: ActionId(
        0,
    ),
}
